--- a/app/views/snippets/convocatorias-principal.liquid
+++ b/app/views/snippets/convocatorias-principal.liquid
@@ -3,19 +3,11 @@
     <div class="over-last-div"></div>
     <p class="text-center" id="title-convo">CONVOCATORIAS</p>
   </div>
+  {% for convocatoria in contents.convocatorias limit:6 %}
   <div class="borde-convocatorias">
     <img src="{{ 'bullet-cine-convocatorias.png' | theme_image_url }}" class="img">
-    <p><a href="#">Convocatoria del 64° Festival Internacional del Cine de Berlín</a></p>
-    <p class="text-convocatorias">Fecha límite: 20 de diciembre.</p>
+    <p><a href="/estimulos-y-apoyos/convocatorias/{{ convocatoria._permalink }}">{{ convocatoria.titulo }}</a></p>
+    <p class="text-convocatorias">{{ convocatoria.fecha | localized_date: '%d/%m/%Y'}}</p>
   </div>
-  <div class="borde-convocatorias">
-    <img src="{{ 'bullet-cine-convocatorias.png' | theme_image_url }}" class="img">
-    <p><a href="#">Convocatoria del Taller de Escritura de Series Dramatizadas para Televisión</a></p>
-    <p class="text-convocatorias">Fecha límite para enviar documentación: 17 de enero 2014.</p>
-  </div>
-  <div class="borde-convocatorias" id="without-border">
-    <img src="{{ 'bullet-cine-convocatorias.png' | theme_image_url }}" class="img">
-    <p><a href="#">Convocatoria de Talents Guadalajara</a></p>
-    <p class="text-convocatorias">Para escritores, cineastas y músicos.</p>
-  </div>
+  {% endfor %}
 </div><!--finall convocatorias-->
