--- a/public/stylesheets/style-1024.css
+++ b/public/stylesheets/style-1024.css
@@ -163,6 +163,16 @@ li.divider {
   display: block;
 }
 
+.nav .link:hover{
+  color:  #626567 !important;
+  text-decoration: underline;
+}
+
+.nav .link.active-menu:hover{
+  color: #ffffff !important;
+  text-decoration: underline;
+}
+
 .navbar-inner {
   background: #fff !important;
   margin-left: -2.2%;
@@ -277,11 +287,12 @@ div#bx-pager2 {
 /*paginacion slider2*/
 div#bx-pager1 {
   width: 40%;
-  position: absolute;
-  margin: -42.5% 0 0 2.5%;
+  position: relative;
+  margin: 0px;
   text-align: right;
   font-size: 20px;
   z-index: 2;
+  float: right;
 }
 
 #bx-pager1 a,  #bx-pager2 a  {
@@ -352,19 +363,26 @@ div#bx-pager1 {
 }
 
 .prev {
-  position: absolute;
-  top: 162%; 
-  left: 14.7%;
-  z-index: 2;
+	position: relative;
+	left: -5px;
+	float: left;
+	z-index: 2;
 }
 
 .next{
-  position: absolute;
-  top: 162%;
-  right: 33.5%; 
-  z-index: 2;
+	position: relative;
+	right: 10px;
+	z-index: 2;
+	float: right;
 }
 
+#mas{
+	display: block;
+	float: right;
+	z-index: 3;
+	margin-top: -35px;
+	margin-right: 10px;
+}
 /*No ver next, prev, start*/
 .bx-wrapper .bx-controls-auto .bx-stop, 
 .bx-wrapper .bx-controls-auto .bx-start,
@@ -412,7 +430,7 @@ div#bx-pager1 {
 .content2 {
   border-top: 2px solid #CCD2D2;
   border-bottom: 2px solid #CCD2D2;
-  margin-top: 2.7%;
+  margin-top: 4.9%;
   padding-bottom: 1.5%;
 }
 
@@ -562,7 +580,7 @@ div#bx-pager1 {
   padding: 2% 1% 1% 1%;
   color: #000;
   max-height: 433px;
-  overflow: hidden;
+  overflow: scroll !important;
   background: #fff;
   font-size: 12px;
 }
@@ -1849,7 +1867,7 @@ div#bx-pager1 {
 
 .menu-counicacion-social li a {
   color: #808488 !important;
-  font-size: 13px;
+  font-size: 12px;
 }
 
 .menu-counicacion-social {
@@ -1871,6 +1889,11 @@ div#bx-pager1 {
 
 .convocatorie a{
 	color:#fff !important;
+}
+
+.pull-left img{
+	height:70px;
+	padding-right: 15px;
 }
 
 /*******************************/
