--- a/app/views/snippets/bloque-leyes-y-reglamentos.liquid
+++ b/app/views/snippets/bloque-leyes-y-reglamentos.liquid
@@ -10,8 +10,8 @@
 <div class="row col-12 divider"></div>
 
 <div class="col-9 list-2row">
-  <img src="{{'icono-libro.png' | theme_image_url }}" class="img">
-  <h5>LEYES FEDERALES EN GENERAL</h5>
+  <a href="#"><img src="{{'icono-libro.png' | theme_image_url }}" class="img"></a>
+  <a href="#"><h5>LEYES FEDERALES EN GENERAL</h5></a>
   <span>Descarga leyes o documentos federales</span>
 </div>
 <div class="col-3 ir-seccion">
@@ -21,8 +21,8 @@
 <div class="row col-12 divider"></div>
 
 <div class="col-9 list">
-  <img src="{{'icono-libro.png' | theme_image_url }}" class="img">
-  <h5>SOBRE LA CORRUPCIÓN INTERNACIONAL</h5>
+  <a href="#"><img src="{{'icono-libro.png' | theme_image_url }}" class="img"></a>
+  <a href="#"><h5>SOBRE LA CORRUPCIÓN INTERNACIONAL</h5></a>
 </div>
 <div class="col-3 ir-seccion">
   <a href="#">IR A LA SECCIÓN</a>
@@ -31,8 +31,8 @@
 <div class="row col-12 divider"></div>
 
 <div class="col-9 list">
-  <img src="{{'icono-libro.png' | theme_image_url }}" class="img">
-  <h5>TRATADOS Y CONVENIOS INTERNACIONALES</h5>
+  <a href="#"><img src="{{'icono-libro.png' | theme_image_url }}" class="img"></a>
+  <a href="#"><h5>TRATADOS Y CONVENIOS INTERNACIONALES</h5></a>
 </div>
 <div class="col-3 ir-seccion">
   <a href="#">IR A LA SECCIÓN</a>
@@ -41,8 +41,8 @@
 <div class="row col-12 divider"></div>
 
 <div class="col-9 list">
-  <img src="{{'icono-libro.png' | theme_image_url }}" class="img">
-  <h5>SOBRE LA PRODUCCIÓN CINEMATOGRÁFICA</h5>
+  <a href="#"><img src="{{'icono-libro.png' | theme_image_url }}" class="img"></a>
+  <a href="#"><h5>SOBRE LA PRODUCCIÓN CINEMATOGRÁFICA</h5></a>
 </div>
 <div class="col-3 ir-seccion">
   <a href="#">IR A LA SECCIÓN</a>
