--- a/app/views/snippets/head.liquid
+++ b/app/views/snippets/head.liquid
@@ -11,6 +11,8 @@
 {{ 'font-awesome.css' | stylesheet_tag }}
 {{ 'normalize.css' | stylesheet_tag }}
 
+{{ 'orbit-1.2.3.css' | stylesheet_tag }}
+
 <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>  
 
