--- a/app/views/snippets/footer.liquid
+++ b/app/views/snippets/footer.liquid
@@ -27,10 +27,7 @@
     </div>
   </div>
 </footer><!--finall footer-->
-  
-<script TYPE="text/javascript" src="{{ 'jquery.js' | javascript_url }}"></script>
-<script TYPE="text/javascript" src="{{ 'furatto.min.js' | javascript_url }}"></script>
-<script TYPE="text/javascript" src="{{ 'jquery.bxslider.js' | javascript_url }}"></script>
-<script TYPE="text/javascript" src="{{ 'jcarousellite.js' | javascript_url }}"></script>
-<script TYPE="text/javascript" src="{{ 'jquery.anoslide.js' | javascript_url }}"></script>
-<script TYPE="text/javascript" src="{{ 'furatto-demo.js' | javascript_url }}"></script>
+
+<script type="text/javascript" src="{{ 'jquery-1.5.1.min.js' | javascript_url }}"></script>
+<script type="text/javascript" src="{{ 'jquery.orbit-1.2.3.min.js' | javascript_url }}"></script>
+<script type="text/javascript" src="{{ 'jcarousellite.js' | javascript_url }}"></script>
