--- a/public/stylesheets/style-1024.css
+++ b/public/stylesheets/style-1024.css
@@ -135,13 +135,11 @@ li.divider {
   float: left;
 }
 
-
-
 .nav li {
   background: #CCD2D2;
-  font-size: 14px;
+  font-size: 10.7px !important;
   margin-right: 4px;
-  width: 139px;
+  width: 126px;
   min-height: 55px;
 }
 
@@ -152,6 +150,12 @@ li.divider {
 .nav li.active-menu a {
   color: white !important;
 }
+
+.nav li.active-menu a:hover {
+  color: white !important;
+  text-decoration: underline;
+}
+
 .nav li a {
   color: #626567 !important;
   font-weight: bold;
@@ -161,6 +165,11 @@ li.divider {
   float: none;
   position: relative;
   display: block;
+}
+
+.nav li a:hover{
+  color: #626567 !important;
+  text-decoration: underline !important;
 }
 
 .nav .link:hover{
@@ -193,6 +202,60 @@ li.divider {
     margin-left: 6%;
   }
 }
+
+
+.nav li ul{
+  display:none;
+  position:absolute;
+  /*min-width: 140px;*/
+}
+
+.nav li:hover > ul{
+  display: block;
+  z-index: 2000;
+  margin-left: 0px;
+  top: 55px;
+  border: 1px solid #e8e8e8;
+}
+
+.nav li ul li{
+  position: relative;
+  border-bottom: 1px solid #e8e8e8;
+  width: 254px;
+  margin-right: 0px;
+  min-height: 30px;
+}
+
+
+.nav li ul li a{
+  color: #626567 !important;
+  text-decoration: none !important;
+  font-weight: bold;
+  text-align: left;
+  line-height: 12px;
+  padding: 7px 0px 0px 10px !important;
+  margin-bottom: 7px;
+  float: none;
+  position: relative;
+  display: block;
+}
+
+.nav li.active-menu ul li a, .nav li.active-menu ul li a:hover{
+  color: #626567 !important;
+}
+
+.nav li.active-menu ul li.active-menu a{
+  color: #ffffff !important;
+}
+
+.nav li:hover > ul li a{
+  text-decoration: none !important;
+}
+
+#nav-imcine li a{
+  text-decoration: none !important;
+}
+
 /*******************************/
 /*       PANEL LEFT            */
 /*******************************/
@@ -219,16 +282,36 @@ li.divider {
 /*       SEARCH                */
 /*******************************/
 
-#search-input {
-  background: #ABACAE;
-  color: #000 !important;
-  width: 119.8% !important;
-  border-radius: 0;
-  text-align: right;
-  padding-right: 5%;
-  font-size: 14px;
-  margin: 0 0 0 -20%;
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+	#search-input {
+		background: #ABACAE;
+  		color: #000 !important;
+  		width: 79% !important;			/*83% !important*/
+  		border-radius: 0;
+  		text-align: right;
+  		padding-right: 5%;
+  		font-size: 14px;
+  		margin: 0px -25px 0px 34px;
+  		float: left;
+  		/*0 0 0 14% 0px -23px 0px 33px*/
+	}
 }
+
+@-moz-document url-prefix() {
+	#search-input {
+		background: #ABACAE;
+  		color: #000 !important;
+  		width: 79% !important;			/*83% !important*/
+  		border-radius: 0;
+  		text-align: right;
+  		padding-right: 5%;
+  		font-size: 14px;
+  		margin: 0px -70px 0px 34px;
+  		float: left;
+  		/*0 0 0 14% 0px -23px 0px 33px*/
+	}
+ } 
+
 
 #search-input::-webkit-input-placeholder{
   color:#000;
@@ -246,7 +329,54 @@ li.divider {
 /*******************************/
 /*       SLIDER                */
 /*******************************/
-#slider2 img {
+
+/*.orbit-wrapper{
+  width: 967px !important;
+}*/
+
+.orbit-caption{
+  color: #ffffff;
+  text-align: left;
+}
+
+#featured{
+  width: 965px !important;
+  height: 317px !important;
+}
+
+#featured img, #featured div { 
+  display: inline-block; 
+}
+
+#featured img{
+  width: 965px;
+}
+
+
+.orbit-wrapper .orbit-caption{
+  text-align: left !important;
+  padding: 7px 17px !important;
+}
+
+
+#featured-noticias{
+  width: 723px !important;
+  height: 419px !important;
+  margin-left: -2px;
+}
+
+#featured-noticias img{
+  width: 723px;
+  height: 419px;
+}
+
+.orbit-wrapper .orbit-caption{
+  bottom: 0px !important;
+}
+
+
+
+/*#slider2 img {
   margin-left: -2%;
 }
 
@@ -272,20 +402,20 @@ li.divider {
 .bx-viewport {
   height: 526px !important;
   z-index: 0;
-}
+}*/
 
 /*paginación slider1*/
-div#bx-pager2 {
+/*div#bx-pager2 {
   width: 15%;
   z-index: 2;
   position: relative;
-  margin: -22.8% 0 0 0.2%; /*-10.6%*/
-  text-align: center;
+  margin: -22.8% 0 0 0.2%;*/ /*-10.6%*/
+  /*text-align: center;
   font-size: 20px;
-}
+}*/
 
 /*paginacion slider2*/
-div#bx-pager1 {
+/*div#bx-pager1 {
   width: 40%;
   position: relative;
   margin: 0px;
@@ -328,10 +458,10 @@ div#bx-pager1 {
 
 #slider3{
   left: -3%;
-}
+}*/
 
 /*link mas en slider 1*/
-#mas-caption {
+/*#mas-caption {
   margin-left: 93%;
   text-align: center;
   padding-top: 5%;
@@ -349,10 +479,10 @@ div#bx-pager1 {
   position: absolute;
   top: 18%;
   left: -5%;
-}
+}*/
 
 /*link ver en slider 2*/
-#ver-caption {
+/*#ver-caption {
   text-align: right;
   margin-right: 5.7%;
   font-size: 22px;
@@ -360,7 +490,7 @@ div#bx-pager1 {
 
 #ver-caption a {
   color: #000 !important;
-}
+}*/
 
 .prev {
 	position: relative;
@@ -430,7 +560,7 @@ div#bx-pager1 {
 .content2 {
   border-top: 2px solid #CCD2D2;
   border-bottom: 2px solid #CCD2D2;
-  margin-top: 4.9%;
+  margin-top: 1.3%;
   padding-bottom: 1.5%;
 }
 
@@ -972,6 +1102,11 @@ div#bx-pager1 {
 
 .col-9.list h5{
   padding-top: 3%;
+  color: #000000;
+}
+
+.col-9.list h5:hover{
+  text-decoration: underline;
 }
 
 .col-9.list-2row{
@@ -992,6 +1127,11 @@ div#bx-pager1 {
 .col-9.list-2row h5{
   padding-top: 2%;
   line-height: 0%;
+  color: #000000;
+}
+
+.col-9.list-2row h5:hover{
+  text-decoration: underline;
 }
 
 .cont-divider h3{
@@ -1604,9 +1744,7 @@ div#bx-pager1 {
 	display:block;
 }
 
-.carrusel-img{
-	width:122px;
-}
+
 /*******************************/
 /*           DATE              */
 /*******************************/
@@ -1858,7 +1996,7 @@ div#bx-pager1 {
 	padding-left: 10px;
 	border-left: 1px #666 solid;
 	line-height:30px;
-	margin-bottom: 5px;
+	margin-bottom: 0px;
 }
 
 .menu-counicacion-social li.first{
@@ -1875,7 +2013,7 @@ div#bx-pager1 {
   border-bottom: 1px solid #808488;
   margin-left: -2%;
   width: 104%;
-  padding: 1% 0 0 4%;
+  padding: 0% 0 0 4%;
 }
 
 /*******************************/
@@ -1892,7 +2030,6 @@ div#bx-pager1 {
 }
 
 .pull-left img{
-	height:70px;
 	padding-right: 15px;
 }
 
